2007-01-09  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped version number for next release
	* doc/manual/news.texi: bumped version number for next release
	* scripts/texi/versions.texi: bumped version number for next release

	* ANNOUNCE: final post-release updates
	* NEWS: final post-release updates
	* doc/manual/news.texi: final post-release updates

2007-01-08  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated for release
	* NEWS: updated for release
	* README: updated for release
	* README-cvs: updated for release
	* THANKS: updated for release
	* doc/manual/descrip.texi: updated for release
	* doc/manual/news.texi: updated for release
	* doc/manual/releases.texi: updated for release
	* doc/manual/tree.texi: updated for release

	* src/test/test-inet_raw.c: corrected LfS device name
	* src/test/test-inet_sctp.c: corrected LfS device name
	* src/test/test-inet_tcp.c: corrected LfS device name
	* src/test/test-inet_udp.c: corrected LfS device name

	* rel20070108_B.html: added release file
	* ANNOUNCE: updated for release

2007-01-05  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man5/strinet.5.man: doc updates
	* doc/manual/releases.texi: doc updates

2007-01-03  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: documentation updates for release
	* NEWS: documentation updates for release
	* NOTES: documentation updates for release
	* README: documentation updates for release
	* README-cvs: documentation updates for release
	* THANKS: documentation updates for release
	* doc/man/Makefile.am: documentation updates for release
	* doc/man/man5/strinet.5.man: documentation updates for release
	* doc/manual/descrip.texi: documentation updates for release
	* doc/manual/strinet.texi: documentation updates for release
	* doc/manual/todo.texi: documentation updates for release
	* doc/manual/tree.texi: documentation updates for release

2006-12-31  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated documentation for release